gateway-api/gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: grpX.randco.eu
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: grpX.randco.eu
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: demo-gateway-tls
