gateway-api/canary-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-route
spec:
  parentRefs:
    - name: demo-gateway
  hostnames:
    - grpX.randco.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-service
          port: 80
          weight: 50
        - name: demo-service-v2
          port: 80
          weight: 50
